--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="custom_header_row mdl-layout__header-row">
-          <span class="mdl-layout-title">WDI Game Design Portfolio</span>
+          <span class="mdl-layout-title">Noah's Portfolio</span>
             </button>
           </div>
         </div>
@@ -19,8 +19,82 @@
         <div class="page-content">
         <br>
         <br>
+
         <br>
-        <h2 align="middle">Game Design Projects</h2>
+        <h2 align="middle"> Current Projects</h2>
+        <h3 align="middle">Film Point Average</h3>
+        <div align="middle">
+          <table style="width=100%">
+            <tr>
+              <td>
+                <img src="./fpa.png" align="middle" width="600px"/>
+                <figcaption align="middle"></figcaption>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <p align="middle"> Film Point Average is a site that aims to legitimize online audience reaction to new films by only <br>allowing one vote per connection to the site for a specific film.<br>
+
+        Films are given a grade on a 4.0 scale {i.e. A, A+ = 4.0, A- = 3.7, B+ = 3.3 etc.} based on user input.<br>
+
+        A films grade is then incorporated into the calculations for its respective cast/crew members Film Point Averages. <br>
+
+        In the future, an upcoming films cast/crew members Film Point Averages will be used to predict its audience reaction.<br> </p>
+        <p align="middle"> <a href="http://www.filmpointaverage.com"> Check out Film Point Average!</a> </p>
+
+
+
+        <br>
+        <h2 align="middle"> Selected UI/UX Design Projects</h2>
+        <h3 align="middle">Coloring Interaction: "Region Color"</h3>
+        <div align="middle">
+          <table style="width=100%">
+            <tr>
+              <td>
+                <img src="./p2.png" align="middle" width="400px"/>
+                <figcaption align="middle"></figcaption>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <p align="middle"> <a href="./p2.pdf"> Check out my design process here!</a> </p>
+        <p align="middle"> <a href="https://www.youtube.com/watch?v=0cpK-MMmRS0&feature=youtu.be"> See Region Color in action here!</a> </p>
+
+        <br>
+        <h3 align="middle">Proxemic Mirror</h3>
+        <div align="middle">
+          <table style="width=100%">
+            <tr>
+              <td>
+                <img src="./p3.png" align="middle" width="400px"/>
+                <figcaption align="middle"></figcaption>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <p align="middle"> <a href="./p3.pdf"> Check out my design process here!</a> </p>
+        <p align="middle"> <a href="https://www.youtube.com/embed/v_g61lykBDU"> See my Proxemic Mirror in action here!</a> </p>
+
+        <br>
+        <h3 align="middle">Power Up!</h3>
+        <div align="middle">
+          <table style="width=100%">
+            <tr>
+              <td>
+                <img src="./p4.png" align="middle" width="200px"/>
+                <figcaption align="middle"></figcaption>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <p align="middle"> <a href="./p4.pdf"> Check out my design process here!</a> </p>
+        <p align="middle"> <a href="https://www.youtube.com/watch?v=2y4FhJgK0ak"> See my Power Up! in action here!</a> </p>
+
+
+
+
+        <br>
+        <h2 align="middle">Selected Game Design Projects</h2>
         <h3 align="middle">Ants vs. SomeBees</h3>
 
         <div align="middle">
@@ -34,7 +108,7 @@
           </table>
         </div>
         <div>
-          <p align="middle"> Ants vs. SomeBees is a python Plants vs. Zombies Clone. In the game the player is given a variety <br>of diffrent Ants (i.e. thrower, defense etc.) and is tasked with vanquishing all those pesky bees. </p>
+          <p align="middle"> Ants vs. SomeBees is a python Plants vs. Zombies Clone. In the game the player is given a variety <br>of  different Ants (i.e. thrower, defense etc.) and is tasked with vanquishing all those pesky bees. </p>
         </div>
 
 
@@ -51,7 +125,7 @@
           </table>
         </div>
         <div>
-          <p align="middle"> Bomb Checkers! is java based checkers game with a twisted. When a bomb piece <br> jumps over an opponents piece it takes not only the jumped piece but those in the 5x5 square around it, <br> with the exception that shield pieces are protected from the explosions. </p>
+          <p align="middle"> Bomb Checkers! is a java based checkers game with a twist. When a bomb piece <br> jumps over an opponents piece it takes not only captures the jumped piece but also those in the <br> 5x5 square  around it, with the exception that shield pieces are protected from the explosions. </p>
         </div>
 
         <br>
@@ -67,7 +141,7 @@
           </table>
         </div>
         <div>
-          <p align="middle"> Suitcase is javascript/jQuery/html remake of the classic Nintendo Game and Watch game "Fire!"  <br> Help the boys get ready for vacation by moving there suitcases from their apartment to the car.  <br>  Make sure you don't drop any cases though! You can play it now at <a href="http://www.thefuishinz.com"> Play Suitcase</a> </p>
+          <p align="middle"> Suitcase is a javascript/jQuery/HTML remake of the classic Nintendo Game and Watch game "Fire!"  <br> Help the boys get ready for vacation by moving their suitcases from their apartment to the car.  <br>  Make sure you don't drop any cases though!
         </div>
 
         <br>
@@ -133,53 +207,6 @@
         </div>
         <p align="middle"> <a href="https://cs184sp18.github.io/proj3_2-pathtracer-noah-lopez/"> Check out my second Ray Tracer here!</a> </p>
 
-        <br>
-        <h2 align="middle"> Selected UI/UX Design Projects</h2>
-        
-        <br>
-        <h3 align="middle">Coloring Interaction: "Region Color"</h3>
-        <div align="middle">
-          <table style="width=100%">
-            <tr>
-              <td>
-                <img src="./p2.png" align="middle" width="400px"/>
-                <figcaption align="middle"></figcaption>
-              </td>
-            </tr>
-          </table>
-        </div>
-        <p align="middle"> <a href="./p2.pdf"> Check out my design process here!</a> </p>
-        <p align="middle"> <a href="https://www.youtube.com/watch?v=0cpK-MMmRS0&feature=youtu.be"> See Region Color in action here!</a> </p>
-
-        <br>
-        <h3 align="middle">Proxemic Mirror</h3>
-        <div align="middle">
-          <table style="width=100%">
-            <tr>
-              <td>
-                <img src="./p3.png" align="middle" width="400px"/>
-                <figcaption align="middle"></figcaption>
-              </td>
-            </tr>
-          </table>
-        </div>
-        <p align="middle"> <a href="./p3.pdf"> Check out my design process here!</a> </p>
-        <p align="middle"> <a href="https://www.youtube.com/embed/v_g61lykBDU"> See my Proxemic Mirror in action here!</a> </p>
-
-        <br>
-        <h3 align="middle">Power Up!</h3>
-        <div align="middle">
-          <table style="width=100%">
-            <tr>
-              <td>
-                <img src="./p4.png" align="middle" width="400px"/>
-                <figcaption align="middle"></figcaption>
-              </td>
-            </tr>
-          </table>
-        </div>
-        <p align="middle"> <a href="./p4.pdf"> Check out my design process here!</a> </p>
-        <p align="middle"> <a href="https://www.youtube.com/watch?v=2y4FhJgK0ak"> See my Power Up! in action here!</a> </p>
 
 
       </main>
