added Raytrace FPS

--- a/index.html
+++ b/index.html
@@ -42,6 +42,29 @@
         In the future, an upcoming films cast/crew members Film Point Averages will be used to predict its audience reaction.<br> </p>
         <p align="middle"> <a href="http://www.filmpointaverage.com"> Check out Film Point Average!</a> </p>
 
+        <br>
+
+
+
+        <h3 align="middle">Raytracing FPS</h3>
+        <div align="middle">
+          <table style="width=100%">
+            <tr>
+              <td>
+                <img src="./raytrace.png" align="middle" width="600px"/>
+                <figcaption align="middle"></figcaption>
+              </td>
+            </tr>
+          </table>
+        </div>
+        <p align="middle"> This FPS game utilizing principles raytracing for its raygun blast mechanics.<br>
+		In the game your raygun has three different  modes: diffuse, glass and mirror. <br>
+		Similarly, the enemies are coated in three different materials: diffuse, glass and mirror. <br>
+		When you blast an enemy coated in the material that is the same as you current rayguns mode you can destroy it. <br>
+		However, if the material and raygun mode do not match, the blast from the raygun will be reflected according the materials brdf. <br>
+		To win the game simply defeat the all enemies and collected the green suitcase in 60 seconds!</p>
+		<p align="middle"> <a href="https://noah-lopez.github.io/final-proj/"> Check out the game here!</a> </p>
+
 
 
         <br>
@@ -143,10 +166,6 @@
         <div>
           <p align="middle"> Suitcase is a javascript/jQuery/HTML remake of the classic Nintendo Game and Watch game "Fire!"  <br> Help the boys get ready for vacation by moving their suitcases from their apartment to the car.  <br>  Make sure you don't drop any cases though!
         </div>
-
-        <br>
-        <h3 align="middle">Future</h3>
-        <p align="middle"> As you can see from my projects above, I have utlized 2D sprites exclusively for my past projects. <br> Luckily, I have had the privilege of taking a course in Computer Graphics this semseter. <br> As a result, I have been exposed to nearly all aspects of the graphics pipeline. <br> I am planning to use this knowledge to create an my first openGL based game for my final project. <br> In the next section I have some selected works from my graphics class. </p>
 
         <br>
 
