added caesar cipher site info

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
         A films grade is then incorporated into the calculations for its respective cast/crew members Film Point Averages. <br>
 
-        In the future, an upcoming films cast/crew members Film Point Averages will be used to predict its audience reaction.<br> </p>
-        <p align="middle"> <a href="http://www.filmpointaverage.com"> Check out Film Point Average!</a> </p>
+        In the future, an upcoming films cast/crew members Film Point Averages will be used to predict its audience reaction.<br> 
+        <b> BUILT WITH JAVASCRIPT, JQUERY, HAML, SASS AND RUBY ON RAILS </b> </p>
+        <!-- <p align="middle"> <a href="http://www.filmpointaverage.com"> Check out Film Point Average!</a> </p> -->
 
         <br>
 
@@ -62,8 +63,28 @@
 		Similarly, the enemies are coated in three different materials: diffuse, glass and mirror. <br>
 		When you blast an enemy coated in the material that is the same as you current rayguns mode you can destroy it. <br>
 		However, if the material and raygun mode do not match, the blast from the raygun will be reflected according the materials brdf. <br>
-		To win the game simply defeat the all enemies and collected the green suitcase in 60 seconds!</p>
+		To win the game simply defeat the all enemies and collected the green suitcase in 60 seconds! <br>
+    <b> BUILT WITH JAVASCRIPT, HTML, CSS AND THREE.JS </b> </p>
 		<p align="middle"> <a href="https://noah-lopez.github.io/final-proj/"> Check out the game here!</a> </p>
+
+        <br>
+
+        <h3 align="middle">Caesar Cipher Encoder/Decoder</h3>
+          <div align="middle">
+            <table style="width=100%">
+              <tr>
+                <td>
+                  <img src="./caesar.png" align="middle" width="600px"/>
+                  <figcaption align="middle"></figcaption>
+                </td>
+              </tr>
+            </table>
+          </div>
+          <p align="middle"> I built a site that can encode an decode messages using the Caesar Cipher. <br>
+          This simple algorithim was my first introduction to cryptography and I have been hooked ever since. <br> 
+          I hope new cryptographers will stumble across the site and fall in love like I did. <br>
+          <b> BUILT WITH JAVASCRIPT, HTML, CSS AND NODE.JS </b> </p>
+          <p align="middle"> <a href="http://caesarcipher.net"> Check out the website here! </a> </p>
 
 
 
@@ -131,7 +152,8 @@
           </table>
         </div>
         <div>
-          <p align="middle"> Ants vs. SomeBees is a python Plants vs. Zombies Clone. In the game the player is given a variety <br>of  different Ants (i.e. thrower, defense etc.) and is tasked with vanquishing all those pesky bees. </p>
+          <p align="middle"> Ants vs. SomeBees is a python Plants vs. Zombies Clone. In the game the player is given a variety <br>of  different Ants (i.e. thrower, defense etc.) and is tasked with vanquishing all those pesky bees. <br>
+          <b> BUILT WITH PYTHON </b> </p>
         </div>
 
 
@@ -148,7 +170,9 @@
           </table>
         </div>
         <div>
-          <p align="middle"> Bomb Checkers! is a java based checkers game with a twist. When a bomb piece <br> jumps over an opponents piece it takes not only captures the jumped piece but also those in the <br> 5x5 square  around it, with the exception that shield pieces are protected from the explosions. </p>
+          <p align="middle"> Bomb Checkers! is a java based checkers game with a twist. When a bomb piece <br> jumps over an opponents piece it takes not only captures the jumped piece but also those in the <br> 5x5 square  around it, with the exception that shield pieces are protected from the explosions. <br>
+          <b> BUILT WITH JAVA </b>  <br>
+          </p>
         </div>
 
         <br>
@@ -164,12 +188,15 @@
           </table>
         </div>
         <div>
-          <p align="middle"> Suitcase is a javascript/jQuery/HTML remake of the classic Nintendo Game and Watch game "Fire!"  <br> Help the boys get ready for vacation by moving their suitcases from their apartment to the car.  <br>  Make sure you don't drop any cases though!
+          <p align="middle"> Suitcase is a javascript/jQuery/HTML remake of the classic Nintendo Game and Watch game "Fire!"  <br> Help the boys get ready for vacation by moving their suitcases from their apartment to the car.  <br>  Make sure you don't drop any cases though!<br> 
+          <b> BUILT WITH  JAVASCRIPT, JQUERY, CSS AND HTML </b> </p>
+
         </div>
 
         <br>
 
         <h2 align="middle">Graphics Projects</h2>
+        <p align="middle"> <b> ALL GRAPHICS PROJECTS BUILT WITH C++ </b> </p>
 
         <h3 align="middle">Rasterizer</h3>
         <div align="middle">
