--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </nav>
         </div>
       </header>
-  </div>
+    </div>
 
 	<br>
 	<br>
@@ -68,6 +68,42 @@
       <div style=" text-align: center; margin-left: -250px; height: 500px; width:500px; top: 45%; left: 50%; font-size:50px; font-family: 'Roboto'; position: absolute; color:white;"> 
         Current Projects
       </div>
+  </div>
+
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <div class="demo-card-wide mdl-card" style="background: transparent; border-style: solid; border-color: red;">
+
+      <!-- TITLE OF WORK + IMG HERE -->
+      <div class="mdl-card__title" style="background: url('./hamp.png') center/cover; text-shadow: 0 0 10px red; border-style: solid; border-color: red;">
+        <h2 class="mdl-card__title-text">Hamptonator</h2>
+      </div>
+
+      <!-- DESCRIPTION HERE -->
+
+      <form onsubmit="return false">
+        <div class="mdl-card__supporting-text" style= "color: white; font-size: 20px;">
+          In anticipation of BROCKHAMPTON's fourth studio album I created this Covert Art 
+          Generator. The site garneredd a ton of traction after being posted on the bands sub
+          reddit. It saw 7k visits and 3k downloads in its first 24 hours!
+        </div>
+
+
+        <!-- BUILT WITH HERE -->
+
+        <div class="mdl-card__actions mdl-card--border" style = "color:white;"align="center">
+        <b> --BUILT WITH-- <br> JAVASCRIPT, HTML, CSS AND NODE.JS </b>
+        </div>
+
+        <!-- LINK TO WORK -->
+
+        <div class="mdl-card__actions mdl-card--border" align="center">
+          <button onclick="linkTo('http://www.hamptonator.com')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" style="background: transparent; border-style: solid; border-color: red;" > Check it Out!</button>
+        </div>
+    </form>
   </div>
 
   <br>
@@ -140,9 +176,9 @@
 
         <!-- LINK TO WORK -->
 
-        <div class="mdl-card__actions mdl-card--border" align="center">
+        <!-- <div class="mdl-card__actions mdl-card--border" align="center">
           <button onclick="linkTo('http://caesarcipher.net')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"  style="background: transparent; border-style: solid; border-color: red;" > Check it Out!</button>
-        </div>
+        </div> -->
     </form>
   </div>
 
