--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <form onsubmit="return false">
         <div class="mdl-card__supporting-text" style= "color: white; font-size: 20px;">
           In anticipation of BROCKHAMPTON's fourth studio album I created this Covert Art 
-          Generator. The site garneredd a ton of traction after being posted on the bands sub
+          Generator. The site garnered a ton of traction after being posted on the bands sub
           reddit. It saw 7k visits and 3k downloads in its first 24 hours!
         </div>
 
