--- a/index.html
+++ b/index.html
@@ -1,312 +1,307 @@
+<!-- 
+  Hello 😊.
+
+  This template is designed and developed by Nisar Hassan Naqvi
+  for anyone to use for free or customize the way they like.
+
+  Github Repo: https://github.com/nisarhassan12/portfolio-template/
+  My Website: https://nisar.dev
+
+  For business & inquires, contact me => syednisarhassan12@gmail.com
+-->
+
+<!--
+  Follow the instructions written in comments to create your stunning portfolio
+-->
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title>Noah Lopez</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="./modernizr-custom.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
+
+  <!-- Put your site title here -->
+  <title>
+    Noah Lopez | Software Engineer based in Bellevue, Washington.
+  </title>
+
+  <meta name="description" content="Add small description of yourslef.">
+  <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
+  <meta name="keywords" content="Put your name, skills and some coding keywords" />
+  <link rel="stylesheet" href="index.css" />
 </head>
+
 <body>
-	<ul>
-  		<li><a href="./index.html">About</a></li>
-  		<span></span>
-  		<li><a href="./work.html">Work</a></li>
-  		<li><a href="./resume.pdf">Resume</a></li>
-	</ul>
 
+  <!-- ***** Header ***** -->
 
-	<div style="display:grid" id = holder>
+  <header class="header" role="banner" id="top">
+    <div class="row">
+      <nav class="nav" role="navigation">
+        <ul class="nav__items">
+          <li class="nav__item"><a href="#experience" class="nav__link">Experience</a></li>
+          <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+          <!-- <li class="nav__item">
+            <a href="#about" class="nav__link">About</a>
+          </li> -->
+          <li class="nav__item">
+            <a href="#contact" class="nav__link">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="header__text-box row">
+      <div class="header__text">
+        <h1 class="heading-primary">
+          <!-- Replace the following name with your name -->
+          <span> <i> Heyyo! </i>  <b style="color:red !important"> I'm Noah. </b> </span>
+        </h1>
+        <!-- Put a small paragraph about yourself -->
+        <p>A Software Engineer based in Bellevue, Washington.</p>
+        <a href=".\resume.pdf" class="btn btn--pink">My Resume</a>
+      </div>
+    </div>
+  </header>
 
-		
+  <main role="main">
 
-		<div style= "background-color: #333;"  class="textdiv animated bounceInDown">
-			<p class="line anim-typewriter"> hello world!</p>
-		</div>
+    <!-- ***** Experience ***** -->
 
-		<div style= "background-image: url(back2.gif); background-repeat:no-repeat;
-   		background-size:cover;"  class="textdiv">
+    <section class="experience" id="experience">
+      <div class="row">
+        <h2> Experience </h2>
+        <div class="experience__content">
+          <div class="experience__text">
+            <!-- Replace the below paragraph with info about yourself -->
+            <h4> BA - Computer Science</h4>
+            <h4> Minor - Theater & Performance Studies</h4>      
+            <h4> 2014-2018 </h4>         
+            <p>
+              <table style="width:100%">
+                <tr>
+                  <th style="text-align:left">Coursework</th>
+                  <th></th> 
+                </tr>
+                <tr>
+                  <td>Data Structures</td>
+                  <td>Machine Structures</td>
+                </tr>
+                <tr>
+                  <td>Software Engineering</td>
+                  <td>Computer Security</td>
+                </tr>
+                <tr>
+                  <td>Computer Graphics</td>
+                  <td>Database Systems</td>
+                </tr>
+                <tr>
+                  <td>UI Design</td>
+                  <td>Linear Algebra</td>
+                </tr>
+                <tr>
+                  <td>Concepts of Statistics</td>
+                  <td>Concepts of Probability</td>
+                </tr>
+                <tr>
+                  <td>Discrete Mathematics</td>
+                  <td>Sound Design</td>
+                </tr>
+                <tr>
+                  <td>Video Production</td>
+                  <td>Writing for Performance</td>
+                </tr>
+              </table>              
+            </p>
+            <!-- Provide a link to your resume -->
+            <!-- <a href="#" class="btn">My Resume</a> -->
+          </div>
 
-		</div>
+          <div class="experience__photo-container">
+            <!-- Add a nice photo of yourself -->
+            <img class="experience__photo" src="./images/ucb.png" alt="" />
+          </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="experience__content">
+          <div class="experience__text">
+            <!-- Replace the below paragraph with info about yourself -->
+            <h4> Associate Software Engineer (DevOps)</h4>
+            <h4> 2019-Present </h4>
+            <p>
 
-		<div style= "color: lime" class="textdiv revealOnScroll" data-animation="bounceInUp">
-			<div 
-				style="position:absolute; 
-				background-color: transparent; 
-				width: 100%; 
-				height: auto;
-				text-align: center;
-				left: 0px;
-				top: 15%;
-				font-size: 42px;
-				"
-			>
-			my name is noah and I am a
-			</div>
+            </p>
+            <!-- Provide a link to your resume -->
+            <!-- <a href="#" class="btn">My Resume</a> -->
+          </div>
 
-			<div 
-				style="position:absolute; 
-				background-color: transparent; 
-				width: 100%; 
-				height: auto;
-				text-align: center;
-				left: 0px;
-				top: 40%;
-				font-size: 75px;
-				"
-			>
-			FULL STACK <br> software engineer
-			</div>
-		</div>
+          <div class="experience__photo-container">
+            <!-- Add a nice photo of yourself -->
+            <img class="experience__photo" src="./images/nintendo.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
 
-		<div style= "background-image: url(back1.gif); background-repeat:no-repeat;
-   		background-size:cover;"  class="textdiv">
+    <!-- ***** Work ***** -->
 
-   		</div>
+    <section class="work" id="work">
+      <div class="row">
+        <h2>My Work</h2>
+        <div class="work__boxes">
 
-		<div style= "color: lime" class="textdiv revealOnScroll" data-animation="bounceInUp">
-			<div 
-				style="position:absolute; 
-				background-color: transparent; 
-				width: 100%; 
-				height: auto;
-				text-align: center;
-				left: 0px;
-				top: 15%;
-				font-size: 42px;
-				"
-			>
-			who graduated from 
-			</div>
+          <!-- Each div with the work__box class is a project. -->
 
-			<div 
-				style="position:absolute; 
-				background-color: transparent; 
-				width: 100%; 
-				height: auto;
-				text-align: center;
-				left: 0px;
-				top: 40%;
-				font-size: 50px;
-				"
-			>
-			UC BERKELEY<br>with a degree in<br>
-			computer science<br> <br> 3.295 GPA
-			</div>
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Raytracing from scratch</h3>
+              <p>
+                A simple ray tracer built without the aid of third party libraries. 
+                Implemented ray sphere intersections, ambient/specular/diffuse lighting,
+                shadows, reflections and refractions.
+              </p>
+              <ul class="work__list">
+                <li>C++</li>
+              </ul>
 
-		</div>
+              <!-- <div class="work__links">
+                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
+                  Visit Site <span>&rarr;</span>
+                </a>
+                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
+                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                </a>
+              </div> -->
+            </div>
+            <div class="work__image-box">
+              <img src="./images/raytracer.jpg" class="work__image" alt="Project 1" />
+            </div>
+          </div>
 
-		<div style= "background-image: url(back3.gif); background-repeat:no-repeat;
-   		background-size:cover;"  class="textdiv">
+          <div class="work__box">
+            <div class="work__text">
+              <h3>FPS raytracing mechanic</h3>
+              <p>
+                An FPS game that utilizes principles of raytracing for its raygun blast
+                mechanics. The raygun has three different modes: diffuse, glass and mirror.
+                Similarly, enemies are coated in the three different materials. When you blast an
+                enemy coated in the material that corresponds to your rayguns mode you can
+                destroy it. However, if the material and raygun mode do not match, the blast from
+                the raygun will be reflected according to the brdf of the enemy's material. 
+              </p>
+              <ul class="work__list">
+                <li>Javascript</li>
+                <li>HTML</li>
+                <li>CSS </li>
+                <li>Three.js</li>
+              </ul>
+              <!-- <div class="work__links">
+                <a href="#" class="link__text">
+                  Visit Site <span>&rarr;</span>
+                </a>
+                <a href="#">
+                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                </a>
+              </div> -->
+            </div>
+            <div class="work__image-box">
+              <img src="./images/fps.png" class="work__image" alt="Project 1" />
+            </div>
+          </div>
 
-		</div>
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Homebrew Games for GBA</h3>
+              <p>
+                I've built several WarioWare-esque games meant to be played quickly (~10s).
+                Some examples include Pong Defense, one move RPG battle, Basketball shot etc. 
+                I love to test them on real GBA hardware.
 
-		<div style= "color: lime" class="textdiv revealOnScroll" data-animation="bounceInUp">
-			<div 
-				style="position:absolute; 
-				background-color: transparent; 
-				width: 100%; 
-				height: auto;
-				text-align: center;
-				left: 0px;
-				top: 15%;
-				font-size: 42px;
-				"
-			>
-			i know how to use
-			</div>
+              </p>
+              <ul class="work__list">
+                <li>C++</li>
+              </ul>
 
-			<div 
-				style="position:absolute; 
-				background-color: transparent; 
-				width: 100%; 
-				height: auto;
-				text-align: center;
-				left: 0px;
-				top: 40%;
-				font-size: 50px;
-				"
-			>
-			Ruby Java Python<br> SQL C C++<br> HTML JavaScript CSS <br>
-			Agile Rails Node.js MongoDB
-			</div>
+              <!-- <div class="work__links">
+                <a href="#" class="link__text">
+                  Visit Site <span>&rarr;</span>
+                </a>
+                <a href="#">
+                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                </a>
+              </div> -->
+            </div>
+            <div class="work__image-box">
+              <img src="./images/gba.jpg" class="work__image" alt="Project 3" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-		</div>
-		<div style= "background-image: url(back4.gif); background-repeat:no-repeat;
-   		background-size:cover;"  class="textdiv">
+  <!-- ***** About ***** -->
 
-   		</div>
+  <!-- <section class="about" id="about">
+    <div class="row">
+      <h2>About Me</h2>
+      <div class="about__content">
+        <div class="about__text">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
+            nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
+            in vel, ex quam quidem quos mollitia labore aut sunt eius
+            ratione molestiae fuga veniam facere similique voluptate.
+          </p>
+          <a href="#" class="btn">My Resume</a>
+        </div>
 
-		<div style= "color: lime" class="textdiv revealOnScroll" data-animation="tada">
-			<div 
-				style="position:absolute; 
-				background-color: transparent; 
-				width: 100%; 
-				height: auto;
-				text-align: center;
-				left: 0px;
-				top: 15%;
-				font-size: 42px;
-				"
-			>
-			i would love to work
-			</div>
+        <div class="about__photo-container">
+          <img class="about__photo" src="" alt="" />
+        </div>
+      </div>
+    </div>
+  </section>
+</main> -->
 
-			<div 
-				style="position:absolute; 
-				background-color: transparent; 
-				width: 100%; 
-				height: auto;
-				text-align: center;
-				left: 0px;
-				top: 40%;
-				font-size: 125px;
-				"
-			>
-			WITH YOU
-			</div>
+  <!-- ***** Contact ***** -->
 
-		</div>
+  <section class="contact" id="contact">
+    <div class="row">
+      <h2>Get in Touch</h2>
+      <div class="contact__info">
+        <p>
+          The quickest way to reach 
+          me is via email. <br> 
+          I will do my best to respond in 1-2 business days. 
+        </p>
+        <!-- Replace the email with yours -->
+        <a href="mailto:noahlopez.work@gmail.com" class="btn">noahlopez.work@gmail.com</a>
+      </div>
+    </div>
+  </section>
 
+  <!-- ***** Footer ***** -->
 
-	</div>
+  <footer role="contentinfo" class="footer">
+    <div class="row">
+      <!-- Update the links to point to your accounts -->
+      <ul class="footer__social-links">
+        <li class="footer__social-link-item">
+          <a href="https://www.linkedin.com/in/noah-lopez-634b2720b/">
+            <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+
+  <a href="#top" class="back-to-top" title="Back to Top">
+    <img src="./images/arrow-up.svg" alt="Back to Top" class="back-to-top__image"/>
+  </a>
+  <script src="./index.js"></script>
 </body>
 
-
-
-<style>
-
-	body {
-	    background-color: lime;
-	}
-	ul {
-    	list-style-type: none;
-    	margin: 0;
-    	padding: 0;
-    	overflow: hidden;
-    	background-color: #333;
-    	position: fixed;
-    	top: 0;
-    	left: 0;
-    	width: 100%;
-    	height: 5%;
-    	z-index: 10;
-    	display: inline-block;
-    	font-family: menlo;
-    	border-bottom: 3px solid lime;
-	}
-
-	li {
-    	float: left;
-    	height: 100%;
-    	width: 10%;
-    	left: 5px;
-    	font-size: 170%;
-    	position: relative;
-    	top: 22%;
-	}
-
-	li a {
-    	display: block;
-    	color: white;
-    	text-align: center;
-    	height: 100%;
-    	text-decoration: none;
-    	position: absolute;
-    	width: 100%;
-    	color: lime;
-	}
-
-	#holder {
-  		/*top: 100px;*/
-  		width: 100%;
-  		height:auto;
-  		left: 0;
-  		background: transparent;
-  		position: absolute;
-  		grid-template-columns: auto;
-  		top:5%;
-	}
-
-	.textdiv {
-		/*background-color: rgba(255, 255, 255, 0.8);*/
-  		padding: 20px;
-  		font-size: 30px;
-  		text-align: center;
-  		height: 500px;
-  		font-family: 'menlo';
-  		color:lime;
-  		position: relative;
-	}
-
-
-	.line {
-      position: relative;
-      top: 50%;
-      width: 4em;
-      margin: 0 auto;
-      border-right: 2px solid rgba(255, 255, 255, 0.75);
-      font-size: 180%;
-      text-align: center;
-      white-space: nowrap;
-      overflow: hidden;transform: translateY(-50%);
-  	  font-size: 65px !important;
-	}
- 
- 
-	.anim-typewriter {
-	      animation: typewriter 2s steps(20) 1s 1 normal both,
-	      blinkTextCursor 500ms steps(20) infinite normal;
-	}
-	 
-	@keyframes typewriter {
-	      from {
-	            width: 0;
-	      }
-	      to {
-	            width: 7em;
-	      }
-	}
-	 
-	@keyframes blinkTextCursor {
-	      from {
-	            border-right-color: rgba(255, 255, 255, 0.75);
-	      }
-	      to {
-	            border-right-color: transparent;
-	      }
-	}
-</style>
-
-
-<script> 
-	var $window = $(window),
-    win_height_padded = $window.height() * 1.1,
-    isTouch           = Modernizr.touch
-
-    $window.on('scroll', revealOnScroll);
-
-	function revealOnScroll() {
-    	var scrolled = $window.scrollTop();
-    	$(".revealOnScroll:not(.animated)").each(function () {
-      		var $this     = $(this),
-          	offsetTop = $this.offset().top;
-
-      		if (scrolled + win_height_padded > offsetTop) {
-        		if ($this.data('timeout')) {
-          			window.setTimeout(function(){
-            		$this.addClass('animated ' + $this.data('animation'));
-            		$this.css("background-color", "#333");
-            		$this.css("color", "lime");
-          		}, parseInt($this.data('timeout'),10));
-        		} else {
-          			$this.addClass('animated ' + $this.data('animation'));
-          			$this.css("background-color", "#333");
-          			$this.css("color", "lime");
-        		}
-      		}
-   		 });
-    }
-
-
-</script>
 </html>
