Added new projects

--- a/index.html
+++ b/index.html
@@ -1,19 +1,3 @@
-<!-- 
-  Hello 😊.
-
-  This template is designed and developed by Nisar Hassan Naqvi
-  for anyone to use for free or customize the way they like.
-
-  Github Repo: https://github.com/nisarhassan12/portfolio-template/
-  My Website: https://nisar.dev
-
-  For business & inquires, contact me => syednisarhassan12@gmail.com
--->
-
-<!--
-  Follow the instructions written in comments to create your stunning portfolio
--->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -197,6 +181,8 @@
                 <li>HTML</li>
                 <li>CSS </li>
                 <li>Three.js</li>
+                <br>
+                <a href="https://noah-lopez.github.io/fps-game/"> Check it out! </a> 
               </ul>
               <!-- <div class="work__links">
                 <a href="#" class="link__text">
@@ -209,6 +195,34 @@
             </div>
             <div class="work__image-box">
               <img src="./images/fps.png" class="work__image" alt="Project 1" />
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Intersection Test Visualizations</h3>
+              <p>
+                Just documenting my voyage through Christer Ericson's Real Time Collision Detection!
+              </p>
+              <ul class="work__list">
+                <li>Javascript</li>
+                <li>HTML</li>
+                <li>CSS </li>
+                <li>Three.js</li>
+                <br>
+                <a href="./sphere-sphere-intersection.html"> Check it out! </a> 
+              </ul>
+              <!-- <div class="work__links">
+                <a href="#" class="link__text">
+                  Visit Site <span>&rarr;</span>
+                </a>
+                <a href="#">
+                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                </a>
+              </div> -->
+            </div>
+            <div class="work__image-box">
+              <img src="./images/sphere.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
@@ -238,33 +252,38 @@
               <img src="./images/gba.jpg" class="work__image" alt="Project 3" />
             </div>
           </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Power UP! (School Project) </h3>
+              <p>
+                A fitness app with a comic book twist! 
+              </p>
+              <ul class="work__list">
+                <li>Javascript</li>
+                <li>HTML</li>
+                <li>CSS </li>
+                <li>Ruby</li>
+                <br>
+                <a href="./p4.pdf"> Check out the design process here!</a>
+              </ul>
+              <!-- <div class="work__links">
+                <a href="#" class="link__text">
+                  Visit Site <span>&rarr;</span>
+                </a>
+                <a href="#">
+                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                </a>
+              </div> -->
+            </div>
+            <div class="work__image-box">
+              <img src="./images/PowerUP!.png" class="work__image" alt="Project 1" />
+            </div>
+          </div>
         </div>
       </div>
+      
     </section>
-
-  <!-- ***** About ***** -->
-
-  <!-- <section class="about" id="about">
-    <div class="row">
-      <h2>About Me</h2>
-      <div class="about__content">
-        <div class="about__text">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-            nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-            in vel, ex quam quidem quos mollitia labore aut sunt eius
-            ratione molestiae fuga veniam facere similique voluptate.
-          </p>
-          <a href="#" class="btn">My Resume</a>
-        </div>
-
-        <div class="about__photo-container">
-          <img class="about__photo" src="" alt="" />
-        </div>
-      </div>
-    </div>
-  </section>
-</main> -->
 
   <!-- ***** Contact ***** -->
 
